# slam-codeInBook-en

ch2/: CMakeLists.txt
ch3/examples/: coordinateTransform.cpp  plotTrajectory.cpp
ch3/exercises/: CMakeLists.txt  assignIdentity.cpp  solveLinearEquations.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/: useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
